# ondeck

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  THEMING.md
.github/workflows/: ci.yml  release.yml
examples/: demo.md
skills/ondeck-presentation/: SKILL.md
skills/ondeck-theme/: SKILL.md
skills/ondeck-theme-from-deck/: SKILL.md
src/: assets.rs  fragments.rs  grid.rs  image_opts.rs  main.rs  parser.rs  pdf.rs  pptx.rs  render.rs  theme.rs  watch.rs
src/assets/: base.css  runtime.js
themes/base/: base.css  base.toml
themes/bold/: theme.css  theme.toml
themes/default/: base.css  theme.css  theme.toml
themes/midnight/: theme.toml
themes/paper/: theme.css  theme.toml
